Applied styles with css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,37 @@
     <title>Desafio 02 BootcampIGTI</title>
   </head>
   <body>
+    <h1>Pesquisa de Usuários</h1>
+    <div class="search-container">
+      <div class="input-group mb-3">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Busca"
+          aria-label="Recipient's username"
+          aria-describedby="button-addon2"
+        />
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary"
+            type="button"
+            id="button-addon2"
+          >
+            BUSCAR
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="users-container">
+      <div class="users-div">
+        <h2>Nenhum Usuário Filtrado</h2>
+        <div class="results-list"></div>
+      </div>
+      <div class="statistics-div">
+        <h2>Nada a ser exibido</h2>
+        <div class="stats-list"></div>
+      </div>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
