--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto+Mono:ital,wght@1,300;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Desafio 02 BootcampIGTI</title>
@@ -37,11 +41,11 @@
     </div>
     <div class="users-container">
       <div class="users-div">
-        <h2>Nenhum Usuário Filtrado</h2>
+        <h2 class="users-title">Nenhum Usuário Filtrado</h2>
         <div class="results-list"></div>
       </div>
       <div class="statistics-div">
-        <h2>Nada a ser exibido</h2>
+        <h2 class="stats-found">Nada a ser exibido</h2>
         <div class="stats-list"></div>
       </div>
     </div>
