Implemented Stats div

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <h2 class="users-title">Nenhum Usuário Filtrado</h2>
         <div class="results-list"></div>
       </div>
-      <div class="statistics-div">
-        <h2 class="stats-found">Nada a ser exibido</h2>
+      <div class="stats-div">
+        <h2 class="stats-title">Nada a ser exibido</h2>
         <div class="stats-list"></div>
       </div>
     </div>
